--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,24 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+ext {
+    android = [
+            applicationId : 'com.laconichy.android',
+            compileSdk    : 33,
+            minSdk        : 21,
+            targetSdk     : 33,
+            versionCode   : 1,
+            versionName   : '1.0.0'
+    ]
+
+    dependencies = [
+            'core-ktx'              : 'androidx.core:core-ktx:1.8.0',
+            'activity-ktx'          : 'androidx.activity:activity-ktx:1.7.0',
+            'appcompat'             : 'androidx.appcompat:appcompat:1.4.1',
+            'material'              : 'com.google.android.material:material:1.5.0',
+            'constraintlayout'      : 'androidx.constraintlayout:constraintlayout:2.1.3',
+            'junit'                 : 'junit:junit:4.13.2',
+            'ext:junit'             : 'androidx.test.ext:junit:1.1.3',
+            'espresso-core'         : 'androidx.test.espresso:espresso-core:3.4.0',
+            'retrofit2'             : 'com.squareup.retrofit2:retrofit:2.9.0',
+            'converter-gson'        : 'com.squareup.retrofit2:converter-gson:2.9.0',
+            'logging-interceptor'   : 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    ]
 }
