--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,4 @@ plugins {
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
+apply from: rootProject.file('config.gradle')
