--- a/lib_dialog/build.gradle
+++ b/lib_dialog/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.laconichy.dialog'
-    compileSdk 33
+    compileSdk rootProject.ext.android.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.android.minSdk
+        targetSdk rootProject.ext.android.targetSdk
     }
 
     buildTypes {
