--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "multielement-dialogs"
 include ':app'
 include ':lib_dialog'
+include ':lib_auto'
+include ':lib_common'
